@@ -23,13 +23,5 @@
 {
     return YES;
 }
-- (NSString *)className
-{
-    return NSStringFromClass([self class]);
-}
-+ (NSString *)className
-{
-    return NSStringFromClass([self class]);
-}
 @end
 
