@@ -2,6 +2,4 @@
 
 array := NSMutableArray array.
 
-1 to: 10000 do: [ :i | array addObject: i].
-
-Transcript showLine:array count.
+1 to: 2000 do: [ :i | array addObject: i].
